as / delivery page fixing