@@ -1,7 +1,9 @@
 package com.dev.HiddenBATHAuto.model.task;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.dev.HiddenBATHAuto.model.auth.Member;
 import com.dev.HiddenBATHAuto.model.auth.Team;
@@ -30,8 +32,9 @@ public class AsTask {
 
     @ManyToOne
     private Member requestedBy;
-    
+
     private String subject;
+
     // 우편번호
     private String zipCode;
 
@@ -43,17 +46,18 @@ public class AsTask {
     // 주소
     private String roadAddress;     // ex: 경기도 용인시 수지구 죽전로 55
     private String detailAddress;   // ex: 302동 1502호
-    
+
     private String reason;
     private int price;
     private String asComment;
+
     // 신규 필드 추가
     private String productName;
     private String productSize;
     private String productColor;
     private String productOptions;   // JSON 문자열로 저장하거나 단일 문자열로 처리
     private String onsiteContact;
-    
+
     @Enumerated(EnumType.STRING)
     private AsStatus status;
 
@@ -74,19 +78,59 @@ public class AsTask {
     @OneToMany(mappedBy = "asTask", cascade = CascadeType.ALL)
     private List<AsImage> images; // 모든 이미지 (type 구분 포함)
 
-    // type = "REQUEST" 인 이미지만 반환
+    /** type = "REQUEST" 인 이미지만 반환 */
     public List<AsImage> getRequestImages() {
-        if (images == null) return List.of();
+        if (images == null || images.isEmpty()) return Collections.emptyList();
         return images.stream()
-                     .filter(img -> "REQUEST".equalsIgnoreCase(img.getType()))
-                     .toList();
+                .filter(img -> img != null && "REQUEST".equalsIgnoreCase(img.getType()))
+                .collect(Collectors.toList());
     }
 
-    // type = "RESULT" 인 이미지만 반환
+    /** type = "RESULT" 인 이미지만 반환 */
     public List<AsImage> getResultImages() {
-        if (images == null) return List.of();
+        if (images == null || images.isEmpty()) return Collections.emptyList();
         return images.stream()
-                     .filter(img -> "RESULT".equalsIgnoreCase(img.getType()))
-                     .toList();
+                .filter(img -> img != null && "RESULT".equalsIgnoreCase(img.getType()))
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * ✅ 고객 화면에서 볼 상태 텍스트
+     * - REQUESTED/IN_PROGRESS => 신청중
+     * - COMPLETED => 신청완료
+     * - CANCELED => 취소
+     */
+    public String getCustomerStatusText() {
+        if (status == null) return "신청중";
+        switch (status) {
+            case COMPLETED:
+                return "신청완료";
+            case CANCELED:
+                return "취소";
+            case REQUESTED:
+            case IN_PROGRESS:
+            default:
+                return "신청중";
+        }
+    }
+
+    /**
+     * ✅ 고객 화면 상태 뱃지 색상(부트스트랩 클래스)
+     * - 신청중: bg-warning
+     * - 신청완료: bg-success
+     * - 취소: bg-danger
+     */
+    public String getCustomerStatusBadgeClass() {
+        if (status == null) return "bg-warning color-white";
+        switch (status) {
+            case COMPLETED:
+                return "bg-success color-white";
+            case CANCELED:
+                return "bg-danger color-white";
+            case REQUESTED:
+            case IN_PROGRESS:
+            default:
+                return "bg-warning color-white";
+        }
     }
 }
